Fixes of mocks
